--- a/styles.css
+++ b/styles.css
@@ -86,6 +86,7 @@ footer {
 }
 
 .colm-form .form-container .btn-login {
+    transition: all 0.3s;
     background-color: #1877f2;
     border: none;
     border-radius: 6px;
@@ -94,6 +95,28 @@ footer {
     color: #ffffff;
     font-weight: 700;
 }
+
+.colm-form .form-container .btn-login:hover {
+
+    background-color: #0a5ecc;
+    border: none;
+    border-radius: 6px;
+    color: #ffffff;
+}
+
+.colm-form .form-container .btn-login:disabled {
+    background-color: #79b0f7;
+    border: none;
+    border-radius: 6px;
+    color: #adadad;
+}
+
+button:disabled{
+  border: 1px solid #999999;
+  background-color: #cccccc;
+  color: #666666;
+}
+
 
 .colm-form .form-container a {
     display: block;
@@ -105,7 +128,7 @@ footer {
 }
 
 .colm-form .form-container a:hover {
-    text-decoration: underline;
+    text-decoration: none;
 }
 
 .colm-form .form-container .btn-new {
